# C_test

./: .gitattributes  .gitignore
Code_indexer/: README.md  pyproject.toml
Code_indexer/src/code_indexer/: __init__.py  api.py  clang_tools.py  cli.py  compile_db.py  ctags.py  db.py  models.py  parser.py  scanner.py  toolchain.py
Code_indexer/tests/: test_cli.py  test_compile_db.py  test_ctags.py  test_index.py  test_parser.py  test_scanner.py  test_toolchain.py
Fake_FW/: CMakeLists.txt  bad_block.c  bad_block.h  cache.c  cache.h  conf.h  ftl.c  ftl.h  fw_ext_registry.c  fw_ext_registry.h  fw_log.c  fw_log.h  fw_types.h  gc.c  gc.h  main.c  nand.c  nand.h  nvme.c  nvme.h  scheduler.c  scheduler.h  wear_level.c  wear_level.h
Fake_FW/expansion/: dma_00.c  dma_00.h  dma_01.c  dma_01.h  dma_02.c  dma_02.h  dma_03.c  dma_03.h  dma_04.c  dma_04.h  dma_05.c  dma_05.h  dma_06.c  dma_06.h  dma_07.c  dma_07.h  dma_08.c  dma_08.h  dma_09.c  dma_09.h  ecc_00.c  ecc_00.h  ecc_01.c  ecc_01.h  ecc_02.c  ecc_02.h  ecc_03.c  ecc_03.h  ecc_04.c  ecc_04.h  ecc_05.c  ecc_05.h  ecc_06.c  ecc_06.h  ecc_07.c  ecc_07.h  ecc_08.c  ecc_08.h  ecc_09.c  ecc_09.h  (+140 more)
Fake_FW/tools/: generate_expansion.py
