[project]
name = "code-indexer"
version = "0.1.0"
description = "C source indexer using tree-sitter, Universal Ctags, and SQLite"
readme = "README.md"
authors = [
    { name = "renjie", email = "chrry220022002.ep01@g2.nctu.edu.tw" }
]
requires-python = ">=3.13"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.2",
]

[project.scripts]
code-index = "code_indexer.cli:main"
code-indexer = "code_indexer.cli:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
